@@ -61,6 +61,7 @@ struct evhttp_connection {
 	struct evbuffer *output_buffer;
 	
 	char *bind_address;		/* address to use for binding the src */
+	u_short bind_port;		/* local port for binding the src */
 
 	char *address;			/* address to connect to */
 	u_short port;
